--- a/README
+++ b/README
@@ -8,6 +8,5 @@ export FLASK_ENV=development
 flask run --host=0.0.0.0 --port=8080
 
 make role arn on aws with EC2FullAccess and S3FullAccess
-add role arn to .aws/config
-
-
+add role arn to .aws/config, then
+mv .aws/ ~/
