--- a/README
+++ b/README
@@ -1,6 +1,11 @@
 image processor on the web
 ----
 
+you kno the drill: 
+python3 -m venv env
+source env/bin/activate
+pip install -r requirements.txt
+
 export AWS_PROFILE=default 
 export FLASK_DEBUG=1
 export FLASK_ENV=development
