--- a/README
+++ b/README
@@ -1,20 +1,8 @@
 image processor on the web
 ----
 
-you kno the drill: 
-python3 -m venv env
-source env/bin/activate
-pip install -r requirements.txt
+docker build -t imageprocessor .
+docker run -p 5000:5000 imageprocessor
 
-export AWS_PROFILE=default 
-export FLASK_DEBUG=1
-export FLASK_ENV=development
-
-flask run --host=0.0.0.0 --port=8080
-
-make role arn on aws with EC2FullAccess and S3FullAccess
-add role arn to .aws/config, then
-mv .aws/ ~/
-
-noob ec2 tips:
-make sure u set the inbound rules u need in security group
+terraform init
+terraform apply
