--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 image processor on the web
 ----
 
-docker build -t imageprocessor .
-docker run -p 5000:5000 imageprocessor
+docker build -t daviddcho/imageprocessor .
+docker run -p 5000:5000 daviddcho/imageprocessor
 
 terraform init
 terraform apply
